# SmartDocSearch

./: .gitignore  README.md  pyproject.toml
persistent/: chroma.sqlite3
src/langchainproject2/: __init__.py
src/langchainproject2/api/: response_service.py  upload.py
src/langchainproject2/chains/: rag_chain.py
src/langchainproject2/models/: embeddings.py  llm.py
src/langchainproject2/utils/: pdf_loader.py  prompt.py  retriever.py  text_splitter.py  vector_store.py
