[project]
name = "langchainproject2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "glitchySid", email = "siddheshmhatre2005@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "langchain-chroma>=0.1.4",
    "langchain>=0.3.14",
    "langchain-community>=0.3.14",
    "langchain-google-vertexai>=2.0.9",
    "langchain-huggingface>=0.1.2",
    "python-dotenv>=1.0.1",
    "langchain-google-genai>=2.0.7",
    "pypdf>=5.1.0",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "pdfplumber>=0.11.5",
]

[project.scripts]
langchainproject2 = "langchainproject2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
